Adding support for organization repositories

--- a/tragit.conf
+++ b/tragit.conf
@@ -1,6 +1,17 @@
 [github]
-username = yourusername
-password = yourpassword
+# Your username.
+username = 
+# Your password.
+password = 
+# Your project name.
+project = 
+# Your organization name. Leave blank if none.
+orgname = 
+# Set to true if you're accessing a project in your organization and not the local forked repo
+projectinorg = false
+# Used when the actual owner of the ticket couldn't be found on Github.
+defaultassignee = 
+# Color used for labels.
 defaultcolor = #0011FF
 
 [issue]
