Bugfixes and added functionality to detect unknown users and assign to default assignee

--- a/tragit.conf
+++ b/tragit.conf
@@ -6,7 +6,7 @@ password =
 # Your project name.
 project = 
 # Your organization name. Leave blank if none.
-orgname = 
+orgname =
 # Set to true if you're accessing a project in your organization and not the local forked repo
 projectinorg = false
 # Used when the actual owner of the ticket couldn't be found on Github.
@@ -16,7 +16,7 @@ defaultcolor = #0011FF
 
 [issue]
 title = summary
-body = description
+body = _description
 assignee = owner
 state = status
 milestone = milestone
